--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -54,6 +54,7 @@
     <Folder Include="Models\Artifacts\Files\Commands\" />
     <Folder Include="Models\Artifacts\Files\Services\" />
     <Folder Include="Models\Artifacts\Projects\Commands\" />
+    <Folder Include="Models\Syntax\Classes\Services\" />
     <Folder Include="Models\Syntax\Methods\ControllerMethods\" />
     <Folder Include="Models\Syntax\Microservices\" />
     <Folder Include="Models\Syntax\RouteHandlers\Create\" />
