--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -30,6 +30,21 @@
     <None Remove="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessageSender.txt" />
     <None Remove="Templates\BuildingBlocks\Messaging\Messaging\ReceiveRequest.txt" />
     <None Remove="Templates\BuildingBlocks\Messaging\Messaging\ServiceBusMessage.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\AccessRight.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\Authentication.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\AuthorizationHeaderParameterOperationFilter.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\AuthorizeResourceOperationAttribute.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\ConfigureServices.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\IPasswordHasher.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\ITokenBuilder.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\ITokenProvider.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\Operations.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\PasswordHasher.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationBehavior.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationHandler.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\SecurityConstants.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\TokenBuilder.txt" />
+    <None Remove="Templates\BuildingBlocks\Security\Security\TokenProvider.txt" />
     <None Remove="Templates\BuildingBlocks\Validation\ConfigureServices.txt" />
     <None Remove="Templates\BuildingBlocks\Validation\ResponseBase.txt" />
     <None Remove="Templates\BuildingBlocks\Validation\ValidationBehavior.txt" />
@@ -66,6 +81,21 @@
     <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessageSender.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\ReceiveRequest.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\ServiceBusMessage.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\AccessRight.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\Authentication.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\AuthorizationHeaderParameterOperationFilter.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\AuthorizeResourceOperationAttribute.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ConfigureServices.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\IPasswordHasher.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ITokenBuilder.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ITokenProvider.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\Operations.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\PasswordHasher.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationBehavior.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationHandler.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\SecurityConstants.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\TokenBuilder.txt" />
+    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\TokenProvider.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Validation\ConfigureServices.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Validation\ResponseBase.txt" />
     <EmbeddedResource Include="Templates\BuildingBlocks\Validation\ValidationBehavior.txt" />
