--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "ng-http-service-create -n Role -d C:\\projects\\Huntress\\src\\Apps\\WebSpa\\ClientApp\\projects\\identity\\core\\src\\lib\\models\\role",
+      "commandLineArgs": "test-projects-remove -d C:\\projects\\Huntress",
       "environmentVariables": {
       }
     }
