--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -15,8 +15,30 @@
   <ItemGroup>
     <None Remove="Templates\Angular\app.component.spec.txt" />
     <None Remove="Templates\Angular\app.component.txt" />
+    <None Remove="Templates\Angular\Components\App\Component.txt" />
+    <None Remove="Templates\Angular\Components\App\Html.txt" />
+    <None Remove="Templates\Angular\Components\App\Scss.txt" />
+    <None Remove="Templates\Angular\Components\App\Spec.txt" />
+    <None Remove="Templates\Angular\Components\Domain\Component.txt" />
+    <None Remove="Templates\Angular\Components\Domain\Html.txt" />
+    <None Remove="Templates\Angular\Components\Domain\Scss.txt" />
+    <None Remove="Templates\Angular\Components\Domain\Spec.txt" />
+    <None Remove="Templates\Angular\Components\ListDetail\Component.txt" />
+    <None Remove="Templates\Angular\Components\ListDetail\Html.txt" />
+    <None Remove="Templates\Angular\Components\ListDetail\Scss.txt" />
+    <None Remove="Templates\Angular\Components\ListDetail\Spec.txt" />
+    <None Remove="Templates\Angular\Components\Detail\Component.txt" />
+    <None Remove="Templates\Angular\Components\Detail\Html.txt" />
+    <None Remove="Templates\Angular\Components\Detail\Scss.txt" />
+    <None Remove="Templates\Angular\Components\Detail\Spec.txt" />
+    <None Remove="Templates\Angular\Components\List\Component.txt" />
+    <None Remove="Templates\Angular\Components\List\HTml.txt" />
+    <None Remove="Templates\Angular\Components\List\Scss.txt" />
+    <None Remove="Templates\Angular\Components\List\Spec.txt" />
     <None Remove="Templates\Angular\http-service.txt" />
     <None Remove="Templates\Angular\main.txt" />
+    <None Remove="Templates\Angular\Services\HttpService\Service.txt" />
+    <None Remove="Templates\Angular\Services\HttpService\Spec.txt" />
     <None Remove="Templates\Api\ConfigureServices.txt" />
     <None Remove="Templates\ArtifactGenerationStrategy.txt" />
     <None Remove="Templates\BuildingBlocks\Messaging\Messaging.Udp\ConfigureServices.txt" />
@@ -52,6 +74,23 @@
     <None Remove="Templates\BuildingBlocks\Validation\ValidationBehavior.txt" />
     <None Remove="Templates\Copyright.txt" />
     <None Remove="Templates\README.txt" />
+    <None Remove="Templates\Scss\Actions.txt" />
+    <None Remove="Templates\Scss\Brand.txt" />
+    <None Remove="Templates\Scss\Breakpoints.txt" />
+    <None Remove="Templates\Scss\Buttons.txt" />
+    <None Remove="Templates\Scss\Dialogs.txt" />
+    <None Remove="Templates\Scss\Field.txt" />
+    <None Remove="Templates\Scss\FormFields.txt" />
+    <None Remove="Templates\Scss\Header.txt" />
+    <None Remove="Templates\Scss\Label.txt" />
+    <None Remove="Templates\Scss\PageScss.txt" />
+    <None Remove="Templates\Scss\Pills.txt" />
+    <None Remove="Templates\Scss\RouterLinkActive.txt" />
+    <None Remove="Templates\Scss\Table.txt" />
+    <None Remove="Templates\Scss\Textarea.txt" />
+    <None Remove="Templates\Scss\Title.txt" />
+    <None Remove="Templates\Scss\TitleBar.txt" />
+    <None Remove="Templates\Scss\Variables.txt" />
     <None Remove="Templates\SpecFlow\DockerControllerHooks.txt" />
     <None Remove="Templates\SyntaxGenerationStrategy.txt" />
     <None Remove="Templates\TestHeader.txt" />
@@ -62,8 +101,30 @@
   <ItemGroup>
     <EmbeddedResource Include="Templates\Angular\app.component.spec.txt" />
     <EmbeddedResource Include="Templates\Angular\app.component.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\App\Component.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\App\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\App\Scss.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\App\Spec.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Domain\Component.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Domain\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Domain\Scss.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Domain\Spec.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Component.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Scss.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Spec.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Detail\Component.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Detail\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Detail\Scss.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Detail\Spec.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\List\Spec.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\List\Scss.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\List\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\List\Component.txt" />
     <EmbeddedResource Include="Templates\Angular\http-service.txt" />
     <EmbeddedResource Include="Templates\Angular\main.txt" />
+    <EmbeddedResource Include="Templates\Angular\Services\HttpService\Service.txt" />
+    <EmbeddedResource Include="Templates\Angular\Services\HttpService\Spec.txt" />
     <EmbeddedResource Include="Templates\Api\AppSettings.txt" />
     <EmbeddedResource Include="Templates\Api\ConfigureServices.txt" />
     <EmbeddedResource Include="Templates\Api\IdFile.txt" />
@@ -115,6 +176,23 @@
     <EmbeddedResource Include="Templates\Infrastructure\SeedData.txt" />
     <EmbeddedResource Include="Templates\IntegrationTests\ApiTest.txt" />
     <EmbeddedResource Include="Templates\IntegrationTests\WebApplicationFactory.txt" />
+    <EmbeddedResource Include="Templates\Scss\Actions.txt" />
+    <EmbeddedResource Include="Templates\Scss\Brand.txt" />
+    <EmbeddedResource Include="Templates\Scss\Breakpoints.txt" />
+    <EmbeddedResource Include="Templates\Scss\Buttons.txt" />
+    <EmbeddedResource Include="Templates\Scss\Dialogs.txt" />
+    <EmbeddedResource Include="Templates\Scss\Field.txt" />
+    <EmbeddedResource Include="Templates\Scss\FormFields.txt" />
+    <EmbeddedResource Include="Templates\Scss\Header.txt" />
+    <EmbeddedResource Include="Templates\Scss\Label.txt" />
+    <EmbeddedResource Include="Templates\Scss\PageScss.txt" />
+    <EmbeddedResource Include="Templates\Scss\Pills.txt" />
+    <EmbeddedResource Include="Templates\Scss\RouterLinkActive.txt" />
+    <EmbeddedResource Include="Templates\Scss\Table.txt" />
+    <EmbeddedResource Include="Templates\Scss\Textarea.txt" />
+    <EmbeddedResource Include="Templates\Scss\Title.txt" />
+    <EmbeddedResource Include="Templates\Scss\TitleBar.txt" />
+    <EmbeddedResource Include="Templates\Scss\Variables.txt" />
     <EmbeddedResource Include="Templates\SpecFlow\DockerControllerHooks.txt" />
     <EmbeddedResource Include="Templates\TestHeader.txt" />
     <EmbeddedResource Include="Templates\SharedKernel\QueryableExtensions.txt" />
