--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "ng-component-create -n Foo -d C:\\projects\\Gridster\\src\\Gridster.App\\projects\\app\\src\\app",
+      "commandLineArgs": "signalr-app-create -n WeddingBidders -d C:\\projects",
       "environmentVariables": {
       }
     }
