--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Architectures\Strategies\" />
     <Folder Include="Models\Artifacts\Files\Commands\" />
     <Folder Include="Models\Artifacts\Files\Services\" />
     <Folder Include="Models\Artifacts\Projects\Commands\" />
