--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "ng-constants-create -d C:\\projects",
+      "commandLineArgs": "aggregate-create -n User -p UserId:Guid -d C:\\projects\\WeddingBidders\\src\\WeddingBidders.Core\\AggregateModel",
       "environmentVariables": {
       }
     }
