--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "class-and-interface-create -n OrderBuilder:IBuilder -d C:\\projects\\Foo",
+      "commandLineArgs": "project-add -n YetAnotherToDoApp.Core -m Core -d C:\\projects\\YetAnotherToDoApp\\src",
       "environmentVariables": {
       }
     }
