--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -22,6 +22,9 @@
     <None Remove="Templates\Angular\Components\App\Spec.txt" />
     <None Remove="Templates\Angular\Components\Default\Component.txt" />
     <None Remove="Templates\Angular\Components\Default\Html.txt" />
+    <None Remove="Templates\Angular\Components\Dialog\Component.txt" />
+    <None Remove="Templates\Angular\Components\Dialog\Html.txt" />
+    <None Remove="Templates\Angular\Components\Dialog\Scss.txt" />
     <None Remove="Templates\Angular\Components\Domain\Component.txt" />
     <None Remove="Templates\Angular\Components\Domain\Html.txt" />
     <None Remove="Templates\Angular\Components\Domain\Scss.txt" />
@@ -124,6 +127,9 @@
     <EmbeddedResource Include="Templates\Angular\Components\App\Spec.txt" />
     <EmbeddedResource Include="Templates\Angular\Components\Default\Component.txt" />
     <EmbeddedResource Include="Templates\Angular\Components\Default\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Dialog\Component.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Dialog\Html.txt" />
+    <EmbeddedResource Include="Templates\Angular\Components\Dialog\Scss.txt" />
     <EmbeddedResource Include="Templates\Angular\Components\Domain\Component.txt" />
     <EmbeddedResource Include="Templates\Angular\Components\Domain\Html.txt" />
     <EmbeddedResource Include="Templates\Angular\Components\Domain\Scss.txt" />
